--- a/Lab3_1/CodeUITests/CodeUITests.csproj
+++ b/Lab3_1/CodeUITests/CodeUITests.csproj
@@ -53,6 +53,13 @@
   <ItemGroup>
     <Compile Include="CodedUITest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UIMap.cs" />
+    <Compile Include="UIMap.Designer.cs">
+      <DependentUpon>UIMap.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="UIMap.uitest" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
